--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "battleship",
   "version": "1.0.0",
   "main": "index.js",
+  "homepage": "https://raihanCarder.github.io/battleship",
   "scripts": {
     "test": "jest",
     "build": "webpack --config webpack.prod.js",
@@ -18,6 +19,7 @@
     "@babel/preset-env": "^7.28.0",
     "babel-jest": "^30.0.5",
     "css-loader": "^7.1.2",
+    "gh-pages": "^6.3.0",
     "html-loader": "^5.1.0",
     "html-webpack-plugin": "^5.6.3",
     "jest": "^30.0.5",
