--- a/package.json
+++ b/package.json
@@ -19,10 +19,14 @@
     "@babel/preset-env": "^7.28.0",
     "babel-jest": "^30.0.5",
     "css-loader": "^7.1.2",
+    "eslint": "^9.32.0",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-prettier": "^5.5.3",
     "gh-pages": "^6.3.0",
     "html-loader": "^5.1.0",
     "html-webpack-plugin": "^5.6.3",
     "jest": "^30.0.5",
+    "prettier": "^3.6.2",
     "style-loader": "^4.0.0",
     "webpack": "^5.100.2",
     "webpack-cli": "^6.0.1",
